--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,6 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
     <color name="semiTransparentWhite">#90FFFFFF</color>
+    <color name="GreenSillaBiblio">#dade98</color>
+    <color name="semiTransparentGreen">#a2dade98</color>
 </resources>
