Forgot to add the image cerro_de_la_silla.jpg in the last commit

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -78,7 +78,7 @@
         android:adjustViewBounds="false"
         android:cropToPadding="false"
         android:onClick="goToLeft"
-        android:scaleType="fitCenter"
+        android:scaleType="centerCrop"
         app:layout_constraintBottom_toBottomOf="@+id/BackgroundImageView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.1"
@@ -99,7 +99,7 @@
         android:background="@color/GreenSillaBiblio"
         android:cropToPadding="false"
         android:onClick="goToRight"
-        android:scaleType="fitCenter"
+        android:scaleType="centerCrop"
         app:layout_constraintBottom_toBottomOf="@+id/BackgroundImageView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.9"
