Corrected the buttons and added java code in MainActivity to change between activities. (Still doesn't work)

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -68,18 +68,17 @@
         app:layout_constraintVertical_bias="0.7" />
 
     <ImageButton
-        android:id="@+id/SettingsImageButton"
-        android:layout_width="70dp"
-        android:layout_height="70dp"
+        android:id="@+id/ConfigImageButton"
+        android:layout_width="70"
+        android:layout_height="70"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:adjustViewBounds="false"
-        android:cropToPadding="false"
-        android:onClick="goToLeft"
-        android:scaleType="centerCrop"
-        app:layout_constraintBottom_toBottomOf="@+id/BackgroundImageView"
+        android:backgroundTint="@android:color/darker_gray"
+        android:scaleType="fitXY"
+        android:tint="@android:color/black"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.1"
         app:layout_constraintStart_toStartOf="parent"
@@ -88,19 +87,16 @@
         app:srcCompat="@drawable/ic_settings_black_24dp" />
 
     <ImageButton
-        android:id="@+id/DetailsImageButton"
-        android:layout_width="70dp"
-        android:layout_height="70dp"
+        android:id="@+id/ListimageButton"
+        android:layout_width="70"
+        android:layout_height="70"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:adjustViewBounds="false"
-        android:background="@color/GreenSillaBiblio"
-        android:cropToPadding="false"
-        android:onClick="goToRight"
-        android:scaleType="centerCrop"
-        app:layout_constraintBottom_toBottomOf="@+id/BackgroundImageView"
+        android:backgroundTint="@color/GreenSillaBiblio"
+        android:scaleType="fitXY"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.9"
         app:layout_constraintStart_toStartOf="parent"
