--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
+    <color name="colorPrimary">#3f51b5</color>
     <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorAccent">#ff4081</color>
     <color name="semiTransparentWhite">#90FFFFFF</color>
-    <color name="GreenSillaBiblio">#dade98</color>
+    <color name="GreenSillaBiblio">#fe999f</color>
     <color name="semiTransparentGreen">#a2dade98</color>
 </resources>
