--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,7 @@
         android:layout_height="0dp"
         android:adjustViewBounds="false"
         android:cropToPadding="false"
-        android:scaleType="center"
+        android:scaleType="centerCrop"
         app:srcCompat="@drawable/cerro_de_la_silla" />
 
     <TextView
