--- a/app/src/main/res/layout/activity_right.xml
+++ b/app/src/main/res/layout/activity_right.xml
@@ -77,7 +77,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:text="Cantidad"
+        android:text="Sensor"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -93,7 +93,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:text="TextView"
+        android:text="Medición"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="@+id/backgroundImageView3"
         app:layout_constraintEnd_toEndOf="parent"
